--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "scripts": {
     "build": "just-build",
     "watch": "just-build --watch",
-    "test": "npm run build dev && npm run test:unit",
-    "test:unit": "karma start test/karma/karma.conf.chrome.js --single-run",
-    "test:debug": "karma start test/karma/karma.conf.chrome.js --log-level debug"
+    "test": "npm run test:chrome",
+    "test:debug": "karma start test/karma/karma.conf.chrome.js --log-level debug",
+    "test:chrome": "npm run build dev && karma start test/karma/karma.conf.chrome.js --single-run",
+    "test:firefox": "npm run build dev && karma start test/karma/karma.conf.firefox.js --single-run",
+    "test:safari": "npm run build dev && karma start test/karma/karma.conf.safari.js --single-run"
   },
   "just-build": {
     "default": [
@@ -68,22 +70,23 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^4.14.0",
+    "eslint": "^4.19.1",
     "just-build": "^0.9.16",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-qunit": "^1.2.1",
-    "qunit": "^2.4.1",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-qunit": "^2.0.1",
+    "qunit": "^2.6.0",
     "qunitjs": "^2.4.1",
-    "rollup": "^0.53.3",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "uglify-js": "^3.3.4"
+    "uglify-js": "^3.3.16"
   },
   "dependencies": {
-    "dexie": "^2.0.1"
+    "dexie": "^2.0.2"
   }
 }
