--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,24 @@
 sudo: false
+env:
+  global:
+    - CC_TEST_REPORTER_ID=787a2f89b15c637323c7340d65ec17e898ac44480706b4b4122ea040c2a88f1d
 language: node_js
 node_js:
   - 9
 before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+#Temporary Meltdown workaround BEGIN
+  - sudo chown root /opt/google/chrome/chrome-sandbox
+  - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
+#Temporary Meltdown workaround END
 script:
   - npm run build dev
   - karma start test/karma/karma.conf.chrome.js --single-run
   - karma start test/karma/karma.conf.firefox.js --single-run
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
