--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-safari-launcher": "^1.0.0",
     "karma-qunit": "^2.0.1",
+    "karma-coverage": "^1.1.1",
     "qunit": "^2.6.0",
     "qunitjs": "^2.4.1",
     "rollup": "^0.58.2",
