--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,13 @@
     [
       "env", {
         "targets": {
-          "browsers": ["> 1%"]
+          "chrome": "64",
+          "edge": "15",
+          "firefox": "58",
+          "safari": "11",
+          "ios": "11",
+          "opera": "49",
+          "node": "8"
         },
         "modules": "umd",
         "debug": false
