--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_script:
 #Temporary Meltdown workaround END
 script:
   - npm run build dev
-  - karma start test/karma/karma.conf.chrome.coverage.js --single-run
+  - karma start test/karma/karma.conf.chrome.js --single-run
   - karma start test/karma/karma.conf.firefox.js --single-run
+  - BABEL_ENV=coverage-test npm run build test-coverage
+  - karma start test/karma/karma.conf.chrome.coverage.js --single-run
 after_script:
   - codeclimate-test-reporter < ./coverage/lcov.info
