--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dexie-opened-databases-addon",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An addon for Dexie.js that keeps track of opened connections",
   "main": "dist/DexieOpenedDatabasesAddon.js",
   "module": "dist/DexieOpenedDatabasesAddon.es.js",
@@ -24,18 +24,27 @@
     "build": "just-build",
     "watch": "just-build --watch",
     "test": "npm run test:chrome",
-    "test:debug": "karma start test/karma/karma.conf.chrome.js --log-level debug",
     "test:chrome": "npm run build dev && karma start test/karma/karma.conf.chrome.js --single-run",
-    "test:chrome:coverage": "npm run build dev && karma start test/karma/karma.conf.chrome.coverage.js --single-run",
+    "test:chrome:debug": "npm run build dev && karma start test/karma/karma.conf.chrome.js --log-level debug",
+    "test:chrome:coverage": "BABEL_ENV=coverage-test npm run build test-coverage && karma start test/karma/karma.conf.chrome.coverage.js",
+    "test:chrome:coverage:html": "BABEL_ENV=coverage-test npm run build test-coverage && karma start test/karma/karma.conf.chrome.coverage.html.js && google-chrome coverage/index.html",
     "test:firefox": "npm run build dev && karma start test/karma/karma.conf.firefox.js --single-run",
-    "test:safari": "npm run build dev && karma start test/karma/karma.conf.safari.js --single-run"
+    "test:firefox:debug": "npm run build dev && karma start test/karma/karma.conf.firefox.js --log-level debug",
+    "test:edge": "npm run build dev && karma start test/karma/karma.conf.edge.js --single-run",
+    "test:edge:debug": "npm run build dev && karma start test/karma/karma.conf.edge.js --log-level debug",
+    "test:ie11": "SET BABEL_ENV=ie11-support && npm run build ie11-support && karma start test/karma/karma.conf.ie11.js --single-run",
+    "test:ie11:debug": "SET BABEL_ENV=ie11-support && npm run build ie11-support && karma start test/karma/karma.conf.ie11.js --log-level debug",
+    "test:safari": "npm run build dev && karma start test/karma/karma.conf.safari.js --single-run",
+    "test:safari:debug": "npm run build dev && karma start test/karma/karma.conf.safari.js --log-level debug",
+    "test:opera": "npm run build dev && karma start test/karma/karma.conf.opera.js --single-run",
+    "test:opera:debug": "npm run build dev && karma start test/karma/karma.conf.opera.js --log-level debug"
   },
   "just-build": {
     "default": [
       "# Build all targets",
-      "just-build release test"
+      "just-build release test gzip"
     ],
-    "dexie-addon": [
+    "main": [
       "# Build the umd module",
       "rollup -c tools/build-configs/rollup.config.js",
       "babel --module-id DexieOpenedDatabasesAddon dist/DexieOpenedDatabasesAddon.es.js -o dist/DexieOpenedDatabasesAddon.js --source-maps",
@@ -46,12 +55,12 @@
     ],
     "release": [
       "# Build the umd module and minifies it.",
-      "just-build dexie-addon",
+      "just-build main",
       "uglifyjs dist/DexieOpenedDatabasesAddon.js -m -c -o dist/DexieOpenedDatabasesAddon.min.js --source-map \"filename='dist/DexieOpenedDatabasesAddon.min.js.map',includeSources='dist/DexieOpenedDatabasesAddon.js.map'\""
     ],
     "dev": [
       "# Build the umd module and the tests",
-      "just-build dexie-addon test"
+      "just-build main test"
     ],
     "gzip": [
       "# Optionally gzip to find the size of the minified & gzipped version",
@@ -60,36 +69,68 @@
     "test": [
       "# Build the test suite.",
       "rollup -c tools/build-configs/rollup.tests.config.js",
-      "mkdir -p test/tmp/",
+      "node -e \"var fs=require('fs');var path=require('path');var dir=path.join('test','tmp');if(!fs.existsSync(dir)){fs.mkdirSync(dir);}\"",
+      "babel tools/tmp/rollup/tests.es.js -o test/tmp/tests.js --source-maps"
+    ],
+    "ie11-support": [
+      "# Build the test suite with IE 11 support.",
+      "node -e \"var fs=require('fs');var path=require('path');var dir=path.join('test','tmp');if(!fs.existsSync(dir)){fs.mkdirSync(dir);}\"",
+      "rollup -c tools/build-configs/rollup.config.js",
+      "babel --presets es2015 --plugins transform-async-to-generator --module-id DexieOpenedDatabasesAddon dist/DexieOpenedDatabasesAddon.es.js -o dist/DexieOpenedDatabasesAddon.ie11up.js --source-maps",
+      "node tools/insertBanner.js dist/DexieOpenedDatabasesAddon.ie11up.js dist/DexieOpenedDatabasesAddon.es.js",
+      "node tools/replaceVersionAndDate.js dist/DexieOpenedDatabasesAddon.ie11up.js dist/DexieOpenedDatabasesAddon.es.js",
+      "node tools/replaceExportForGlobal.js dist/DexieOpenedDatabasesAddon.ie11up.js",
+      "rollup -c tools/build-configs/rollup.tests.config.js",
+      "babel --presets es2015 --plugins transform-async-to-generator tools/tmp/rollup/tests.es.js -o test/tmp/tests.ie11up.js --source-maps"
+    ],
+    "test-coverage": [
+      "# Build the test coverage suite.",
+      "node -e \"var fs=require('fs');var path=require('path');var dir=path.join('test','tmp');if(!fs.existsSync(dir)){fs.mkdirSync(dir);}\"",
+      "rollup -c tools/build-configs/rollup.config.js",
+      "babel --module-id DexieOpenedDatabasesAddon dist/DexieOpenedDatabasesAddon.es.js -o tools/tmp/rollup/tests.testCoverage.js --source-maps",
+      "node tools/insertBanner.js tools/tmp/rollup/tests.testCoverage.js dist/DexieOpenedDatabasesAddon.es.js",
+      "node tools/replaceVersionAndDate.js tools/tmp/rollup/tests.testCoverage.js dist/DexieOpenedDatabasesAddon.es.js",
+      "node tools/replaceExportForGlobal.js tools/tmp/rollup/tests.testCoverage.js",
+      "node tools/addCommonJSWrapperSkipComments.js tools/tmp/rollup/tests.testCoverage.js",
+      "rollup -c tools/build-configs/rollup.tests.config.js",
       "babel tools/tmp/rollup/tests.es.js -o test/tmp/tests.js --source-maps"
     ]
   },
   "engines": {
-    "node": ">=9.3"
+    "node": ">=9.4"
   },
   "homepage": "https://github.com/andrehtissot/dexie-opened-databases-addon/blob/master/README.md",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.2.0",
     "escape-string-regexp": "^1.0.5",
-    "eslint": "^4.19.1",
+    "eslint": "^5.6.0",
+    "hoek": "^5.0.4",
     "just-build": "^0.9.16",
-    "karma": "^2.0.2",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
+    "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.1.0",
+    "karma-ie-launcher": "^1.0.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-qunit": "^2.0.1",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-qunit": "^2.1.0",
     "karma-safari-launcher": "^1.0.0",
-    "qunit": "^2.6.0",
+    "qunit": "^2.6.2",
     "qunitjs": "^2.4.1",
-    "rollup": "^0.58.2",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup": "^0.66.2",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "uglify-es": "^3.3.9"
   },
   "dependencies": {
-    "dexie": "^2.0.3"
+    "dexie": "^2.0.4"
   }
 }
