--- a/package.json
+++ b/package.json
@@ -108,10 +108,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
-    "hoek": "^5.0.4",
+    "eslint": "^5.9.0",
+    "hoek": "^6.0.2",
     "just-build": "^0.9.16",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage": "^1.1.2",
     "karma-edge-launcher": "^0.4.2",
@@ -121,13 +121,14 @@
     "karma-opera-launcher": "^1.0.0",
     "karma-qunit": "^2.1.0",
     "karma-safari-launcher": "^1.0.0",
-    "qunit": "^2.6.2",
+    "qunit": "^2.8.0",
     "qunitjs": "^2.4.1",
-    "rollup": "^0.66.2",
-    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup": "^0.67.0",
+    "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "uglify-es": "^3.3.9"
+    "uglify-es": "^3.3.9",
+    "merge": ">=1.2.1"
   },
   "dependencies": {
     "dexie": "^2.0.4"
