--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,25 @@
 {
-  "plugins": ["prettier"],
-  "parserOptions": {
-    "ecmaVersion": 2017,
-    "sourceType": "module",
-    "ecmaFeatures": {}
-  },
-  "env": {
-    "node": true
-  },
-  "extends": "eslint:recommended",
-  "rules": {
-    "no-undef": ["error"],
-    "semi": ["error", "never"],
-    "indent": ["error", 4, { "SwitchCase": 1 }],
-    "no-console": ["error", { "allow": ["warn", "error"] }],
-    "quotes": ["error", "single", { "avoidEscape": true }],
-    "prettier/prettier": "error"
-  },
-  "globals": {
-    "Dexie": true,
-    "Map": true
-  }
+    "plugins": ["prettier"],
+    "parserOptions": {
+        "ecmaVersion": 2017,
+        "sourceType": "module",
+        "ecmaFeatures": {}
+    },
+    "env": {
+        "node": true
+    },
+    "extends": "eslint:recommended",
+    "rules": {
+        "arrow-parens": ["error", "always"],
+        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "no-console": ["error", { "allow": ["warn", "error"] }],
+        "no-undef": ["error"],
+        "prettier/prettier": "error",
+        "quotes": ["error", "single", { "avoidEscape": true }],
+        "semi": ["error", "never"]
+    },
+    "globals": {
+        "Dexie": true,
+        "Map": true
+    }
 }
