--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
+    "arrowParens": "always",
     "semi": false,
     "singleQuote": true,
     "trailingComma": "es5",
     "printWidth": 120,
-    "tabWidth": 4,   
+    "tabWidth": 4,
 }
