--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
         "build": "just-build",
         "watch": "just-build --watch",
         "test": "npm run test:chrome",
-        "test:chrome": "npm run build dev && karma start test/karma/karma.conf.chrome.js --single-run",
-        "test:chrome:debug": "npm run build dev && karma start test/karma/karma.conf.chrome.js --log-level debug",
-        "test:chrome:coverage": "BABEL_ENV=coverage-test npm run build test-coverage && karma start test/karma/karma.conf.chrome.coverage.js",
-        "test:chrome:coverage:html": "BABEL_ENV=coverage-test npm run build test-coverage && karma start test/karma/karma.conf.chrome.coverage.html.js && google-chrome coverage/index.html",
-        "test:firefox": "npm run build dev && karma start test/karma/karma.conf.firefox.js --single-run",
-        "test:firefox:debug": "npm run build dev && karma start test/karma/karma.conf.firefox.js --log-level debug",
-        "test:edge": "npm run build dev && karma start test/karma/karma.conf.edge.js --single-run",
-        "test:edge:debug": "npm run build dev && karma start test/karma/karma.conf.edge.js --log-level debug",
-        "test:ie11": "SET BABEL_ENV=ie11-support && npm run build ie11-support && karma start test/karma/karma.conf.ie11.js --single-run",
-        "test:ie11:debug": "SET BABEL_ENV=ie11-support && npm run build ie11-support && karma start test/karma/karma.conf.ie11.js --log-level debug",
-        "test:safari": "npm run build dev && karma start test/karma/karma.conf.safari.js --single-run",
-        "test:safari:debug": "npm run build dev && karma start test/karma/karma.conf.safari.js --log-level debug",
-        "test:opera": "npm run build dev && karma start test/karma/karma.conf.opera.js --single-run",
-        "test:opera:debug": "npm run build dev && karma start test/karma/karma.conf.opera.js --log-level debug",
+        "test:chrome": "just-build dev && karma start test/karma/karma.conf.chrome.js --single-run",
+        "test:chrome:debug": "just-build dev && karma start test/karma/karma.conf.chrome.js --log-level debug",
+        "test:chrome:coverage": "BABEL_ENV=coverage-test just-build test-coverage && karma start test/karma/karma.conf.chrome.coverage.js",
+        "test:chrome:coverage:html": "BABEL_ENV=coverage-test just-build test-coverage && karma start test/karma/karma.conf.chrome.coverage.html.js && google-chrome coverage/index.html",
+        "test:firefox": "just-build dev && karma start test/karma/karma.conf.firefox.js --single-run",
+        "test:firefox:debug": "just-build dev && karma start test/karma/karma.conf.firefox.js --log-level debug",
+        "test:edge": "just-build dev && karma start test/karma/karma.conf.edge.js --single-run",
+        "test:edge:debug": "just-build dev && karma start test/karma/karma.conf.edge.js --log-level debug",
+        "test:ie11": "just-build dev && karma start test/karma/karma.conf.ie11.js --single-run",
+        "test:ie11:debug": "just-build dev && karma start test/karma/karma.conf.ie11.js --log-level debug",
+        "test:safari": "just-build dev && karma start test/karma/karma.conf.safari.js --single-run",
+        "test:safari:debug": "just-build dev && karma start test/karma/karma.conf.safari.js --log-level debug",
+        "test:opera": "just-build dev && karma start test/karma/karma.conf.opera.js --single-run",
+        "test:opera:debug": "just-build dev && karma start test/karma/karma.conf.opera.js --log-level debug",
         "prettier-src": "find ./src -name '*.js' -or -name '*.json' | xargs prettier --write",
         "prettier-tools": "find ./tools -name '*.js' -or -name '*.json' | grep -v tools/tmp | xargs prettier --write",
         "prettier-test": "find ./test -name '*.js' -or -name '*.json' | grep -v test/tmp | xargs prettier --write",
