--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
         "test:firefox:debug": "just-build dev && karma start test/karma/karma.conf.firefox.js --log-level debug",
         "test:edge": "just-build dev && karma start test/karma/karma.conf.edge.js --single-run",
         "test:edge:debug": "just-build dev && karma start test/karma/karma.conf.edge.js --log-level debug",
-        "test:ie11": "just-build dev && karma start test/karma/karma.conf.ie11.js --single-run",
-        "test:ie11:debug": "just-build dev && karma start test/karma/karma.conf.ie11.js --log-level debug",
+        "test:ie11": "SET BABEL_ENV=ie11-support && just-build ie11-support && karma start test/karma/karma.conf.ie11.js --single-run",
+        "test:ie11:debug": "SET BABEL_ENV=ie11-support && just-build ie11-support && karma start test/karma/karma.conf.ie11.js --log-level debug",
         "test:safari": "just-build dev && karma start test/karma/karma.conf.safari.js --single-run",
         "test:safari:debug": "just-build dev && karma start test/karma/karma.conf.safari.js --log-level debug",
         "test:opera": "just-build dev && karma start test/karma/karma.conf.opera.js --single-run",
