--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dexie-opened-databases-addon",
-    "version": "1.0.1",
+    "version": "1.0.2-alpha",
     "description": "An addon for Dexie.js that keeps track of opened connections",
     "main": "dist/DexieOpenedDatabasesAddon.js",
     "module": "dist/DexieOpenedDatabasesAddon.es.js",
