--- a/package.json
+++ b/package.json
@@ -131,11 +131,12 @@
         "prettier": "^1.18.2",
         "qunit": "^2.9.2",
         "qunitjs": "^2.4.1",
-        "rollup": "^1.16.3",
+        "rollup": "^1.16.6",
         "rollup-plugin-commonjs": "^10.0.1",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-sourcemaps": "^0.4.2",
-        "uglify-es": "^3.3.9"
+        "uglify-es": "^3.3.9",
+        "braces": ">=2.3.1"
     },
     "dependencies": {
         "dexie": "^2.0.4"
