--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ addons:
 before_script:
   - npm install codeclimate-test-reporter -g
   - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  # - sh -e /etc/init.d/xvfb start
 #Temporary Meltdown workaround BEGIN
-  - sudo chown root /opt/google/chrome/chrome-sandbox
-  - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
+  # - sudo chown root /opt/google/chrome/chrome-sandbox
+  # - sudo chmod 4755 /opt/google/chrome/chrome-sandbox
 #Temporary Meltdown workaround END
 script:
   - npm run build dev
